--- a/style.css
+++ b/style.css
@@ -1,7 +1,63 @@
+html, body {
+    height: 100%;
+}
+
+.codeWorkSpace {
+    transition: all 1s ease-in-out;
+    width:300px;
+    position: fixed;
+    background-color: #23241f;
+    border:1px solid white;
+    color: red;
+    right:0;
+    top:0;
+    height:calc(100% - 2px);
+    padding-left: 2px;
+}
+
+.hideTerminal {
+    width:calc(100% - 300px);
+    height:15px;
+    position: absolute;
+    top:0;
+    left:0;
+}
+
+
 .container {
     width: 100%;
     min-height: 1px;
 }
+
+.badass-terminal {
+    background-color: black;
+    color:rgb(0, 255, 0);
+    border:1px solid white;
+    overflow: hidden;
+    transition: all 1s ease-in-out;
+}
+
+.terminal-fullScreen {
+    width: 100%;
+    text-align: center;
+    margin-left:auto;
+    margin-right:auto;
+    font-family: "Times New Roman", Times, serif;
+    font-style: italic;
+}
+
+
+.terminal-normal {
+    background-color: azure;
+    border: 1px solid black;
+
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+
+
+}
+
 
 
 .terminal {
@@ -12,14 +68,23 @@
     height: 300px;
     overflow: hidden;
     bottom:calc(100% - 320px);
-    background-color: azure;
-    border: 1px solid black;
-    left:calc(50% - 200px);
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
 
-    transition: all 2s ease-in-out;
+    left:calc(50% - 200px);
+
+
+}
+
+.terminal-right {
+    padding-left: 5px;
+    position: absolute;
+    width: 400px;
+
+    height: 300px;
+    overflow: hidden;
+    bottom:calc(100% - 320px);
+
+    left:calc(80% - 200px);
+
 }
 
 /*.setMiddle {*/
@@ -38,6 +103,165 @@
     transition: all 2s ease-in-out;
 }
 
+pre {
+    float:left;
+    margin:0;
+    text-align: left;
+}
+
+
+
+
+
+.hljs {
+    display: block;
+    overflow-x: auto;
+    padding: 0.5em;
+    background: #23241f;
+    -webkit-text-size-adjust: none;
+}
+
+
+.hljs,
+.hljs-tag,
+.css .hljs-rule,
+.css .hljs-value,
+.aspectj .hljs-function,
+.css .hljs-function
+.hljs-preprocessor,
+.hljs-pragma {
+    color: #f8f8f2;
+}
+
+.hljs-strongemphasis,
+.hljs-strong,
+.hljs-emphasis {
+    color: #a8a8a2;
+}
+
+.hljs-bullet,
+.hljs-blockquote,
+.hljs-horizontal_rule,
+.hljs-number,
+.hljs-regexp,
+.alias .hljs-keyword,
+.hljs-literal,
+.hljs-hexcolor {
+    color: #ae81ff;
+}
+
+.hljs-tag .hljs-value,
+.hljs-code,
+.hljs-title,
+.css .hljs-class,
+.hljs-class .hljs-title:last-child {
+    color: #a6e22e;
+}
+
+.hljs-link_url {
+    font-size: 80%;
+}
+
+.hljs-strong,
+.hljs-strongemphasis {
+    font-weight: bold;
+}
+
+.hljs-emphasis,
+.hljs-strongemphasis,
+.hljs-class .hljs-title:last-child,
+.hljs-typename {
+    font-style: italic;
+}
+
+.hljs-keyword,
+.ruby .hljs-class .hljs-keyword:first-child,
+.ruby .hljs-function .hljs-keyword,
+.hljs-function,
+.hljs-change,
+.hljs-winutils,
+.hljs-flow,
+.nginx .hljs-title,
+.tex .hljs-special,
+.hljs-header,
+.hljs-attribute,
+.hljs-symbol,
+.hljs-symbol .hljs-string,
+.hljs-tag .hljs-title,
+.hljs-value,
+.alias .hljs-keyword:first-child,
+.css .hljs-tag,
+.css .unit,
+.css .hljs-important {
+    color: #f92672;
+}
+
+.hljs-function .hljs-keyword,
+.hljs-class .hljs-keyword:first-child,
+.hljs-aspect .hljs-keyword:first-child,
+.hljs-constant,
+.hljs-typename,
+.hljs-name,
+.css .hljs-attribute {
+    color: #66d9ef;
+}
+
+.hljs-variable,
+.hljs-params,
+.hljs-class .hljs-title,
+.hljs-aspect .hljs-title {
+    color: #f8f8f2;
+}
+
+.hljs-string,
+.css .hljs-id,
+.hljs-subst,
+.hljs-type,
+.ruby .hljs-class .hljs-parent,
+.hljs-built_in,
+.django .hljs-template_tag,
+.django .hljs-variable,
+.smalltalk .hljs-class,
+.django .hljs-filter .hljs-argument,
+.smalltalk .hljs-localvars,
+.smalltalk .hljs-array,
+.hljs-attr_selector,
+.hljs-pseudo,
+.hljs-addition,
+.hljs-stream,
+.hljs-envvar,
+.apache .hljs-tag,
+.apache .hljs-cbracket,
+.tex .hljs-command,
+.hljs-prompt,
+.hljs-link_label,
+.hljs-link_url {
+    color: #e6db74;
+}
+
+.hljs-comment,
+.hljs-annotation,
+.hljs-decorator,
+.hljs-pi,
+.hljs-doctype,
+.hljs-deletion,
+.hljs-shebang,
+.apache .hljs-sqbracket,
+.tex .hljs-formula {
+    color: #75715e;
+}
+
+.coffeescript .javascript,
+.javascript .xml,
+.tex .hljs-formula,
+.xml .javascript,
+.xml .vbscript,
+.xml .css,
+.xml .hljs-cdata,
+.xml .php,
+.php .xml {
+    opacity: 0.5;
+}
 
 
 
