--- a/style.css
+++ b/style.css
@@ -110,7 +110,20 @@ pre {
 }
 
 
-
+.logo {
+position: absolute;
+top: -38px;
+background-color: rgb(102, 51, 0);
+width: 300px;
+border-radius: 100% 100% 0% 0%;
+text-align: center;
+font-size: 35px;
+right: 47vh;
+height: 60px;
+padding-top: 20px;
+font-family: "Courier New", Courier, monospace;
+font-weight: 800;
+}
 
 
 .hljs {
