--- a/Test/test.css
+++ b/Test/test.css
@@ -130,9 +130,9 @@ font-weight: 800;
 
 /*Time to animate*/
 .x1 {
-  -webkit-animation: moveclouds 15s linear infinite;
-  -moz-animation: moveclouds 15s linear infinite;
-  -o-animation: moveclouds 15s linear infinite;
+  -webkit-animation: moveclouds 30s linear infinite;
+  -moz-animation: moveclouds 30s linear infinite;
+  -o-animation: moveclouds 30s linear infinite;
 }
 
 /*variable speed, opacity, and position of clouds for realistic effect*/
@@ -146,9 +146,9 @@ font-weight: 800;
   
   /*Speed will also be proportional to the size and opacity*/
   /*More the speed. Less the time in 's' = seconds*/
-  -webkit-animation: moveclouds 25s linear infinite;
-  -moz-animation: moveclouds 25s linear infinite;
-  -o-animation: moveclouds 25s linear infinite;
+  -webkit-animation: moveclouds 50s linear infinite;
+  -moz-animation: moveclouds 50s linear infinite;
+  -o-animation: moveclouds 50s linear infinite;
 }
 
 .x3 {
@@ -159,9 +159,9 @@ font-weight: 800;
   transform: scale(0.8);
   opacity: 0.8; /*opacity proportional to the size*/
   
-  -webkit-animation: moveclouds 20s linear infinite;
-  -moz-animation: moveclouds 20s linear infinite;
-  -o-animation: moveclouds 20s linear infinite;
+  -webkit-animation: moveclouds 40s linear infinite;
+  -moz-animation: moveclouds 40s linear infinite;
+  -o-animation: moveclouds 40s linear infinite;
 }
 
 .x4 {
@@ -172,9 +172,9 @@ font-weight: 800;
   transform: scale(0.75);
   opacity: 0.75; /*opacity proportional to the size*/
   
-  -webkit-animation: moveclouds 18s linear infinite;
-  -moz-animation: moveclouds 18s linear infinite;
-  -o-animation: moveclouds 18s linear infinite;
+  -webkit-animation: moveclouds 36s linear infinite;
+  -moz-animation: moveclouds 36s linear infinite;
+  -o-animation: moveclouds 36s linear infinite;
 }
 
 .x5 {
@@ -185,22 +185,22 @@ font-weight: 800;
   transform: scale(0.8);
   opacity: 0.8; /*opacity proportional to the size*/
   
-  -webkit-animation: moveclouds 20s linear infinite;
-  -moz-animation: moveclouds 20s linear infinite;
-  -o-animation: moveclouds 20s linear infinite;
+  -webkit-animation: moveclouds 40s linear infinite;
+  -moz-animation: moveclouds 40s linear infinite;
+  -o-animation: moveclouds 40s linear infinite;
 }
 
 @-webkit-keyframes moveclouds {
-  0% {margin-left: 1000px;}
-  100% {margin-left: -1000px;}
+  0% {margin-left: 100vh;}
+  100% {margin-left: -100vh;}
 }
 @-moz-keyframes moveclouds {
-  0% {margin-left: 1000px;}
-  100% {margin-left: -1000px;}
+  0% {margin-left: 100vh;}
+  100% {margin-left: -100vh;}
 }
 @-o-keyframes moveclouds {
-  0% {margin-left: 1000px;}
-  100% {margin-left: -1000px;}
+  0% {margin-left: 100vh;}
+  100% {margin-left: -100vh;}
 }
 
 
